FIX: Virtual keyboard for fullpage login/signup This change allows the form to resize when the virtual keyboard is shown on mobile devices. I could only reproduce the issue on production.

--- a/app/assets/stylesheets/mobile/login-signup-page.scss
+++ b/app/assets/stylesheets/mobile/login-signup-page.scss
@@ -1,5 +1,13 @@
 // Shared styles
 
+html.keyboard-visible.mobile-view
+  #main-outlet:has(.login-fullpage, .signup-fullpage, .invites-show) {
+  height: calc(100dvh - var(--header-offset) - env(keyboard-inset-height));
+  max-height: calc(100dvh - var(--header-offset) - env(keyboard-inset-height));
+  overflow-y: scroll;
+  padding-top: 0;
+}
+
 .login-fullpage,
 .signup-fullpage,
 .invites-show {
